--- a/source/components/wi-context-menu/wi-context-menu.less
+++ b/source/components/wi-context-menu/wi-context-menu.less
@@ -14,6 +14,10 @@ wi-context-menu {
             border: 1px solid black;
             padding: 3px;
             position: absolute;
+            transition: top 0.2s, left 0.2s;
+            -moz-transition: top 0.2s, left 0.2s;
+            -webkit-transition:top 0.2s, left 0.2s;
+            -o-transition: top 0.2s, left 0.2s;
             & > wi-button {
                 float:none;
                 width: 100%;
