track-properties-dialog: markup updating

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -156,3 +156,46 @@ input[required] {
 	height: 200px;
 	border: 1px solid #0C1021;
 }
+.trackTab {
+	margin-top: 10px;
+	border-bottom: 1px solid #cecece;
+}
+
+.trackTab li.active {
+	border: 1px solid #cecece;
+	border-bottom: 1px solid #fff;
+	background-color: #fff;
+	padding-top: 7px;
+}
+.trackTab li {
+	display:inline;
+	cursor: pointer;
+	background-color: #DEDFE4;
+	padding: 5px 10px 2px;
+	border: 1px solid #cecece;
+
+}
+#preview {
+	height: 50px;
+	border:1px solid #cecece;
+}
+.properties {
+	width: 90%;
+	height: 750px;
+	margin: auto;
+}
+.curveTable tbody tr td input {
+	border: none;
+	width: 5em;
+}
+.curveTable tbody tr td select {
+	border: none;
+	width: 4.5em;
+}
+.selected {
+	background-color:#cecece;
+}
+.table {
+	font-size: 12px;
+	font-style: bolder;
+}
