fix well item tree && disable selection text

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -6,6 +6,14 @@ input, button, textarea, select{
 }
 body{
     background: url(../img/bg_index.png) repeat;
+
+    // disable text selection
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .wi-hidden {
   visibility: hidden;
