--- a/source/less/main.less
+++ b/source/less/main.less
@@ -15,6 +15,9 @@ body{
     -ms-user-select: none;
     user-select: none;
 }
+span {
+    cursor: default;
+}
 .wi-hidden {
   visibility: hidden;
 }
