commit to merge

--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -41,7 +41,6 @@
     <wi-button name='trackButton' label='track' handler='trackButtonClick'></wi-button>
     <wi-button name='addData1Button' label='add data 1' handler='addData1ButtonClick'></wi-button>
     <wi-button name='addData2Button' label='add data 2' handler='addData2ButtonClick'></wi-button>
-    <wi-button name='toggleShadingButton' label='toggle shading' handler='toggleShadingButtonClick'></wi-button>
     <div class='form-group'>
         <label> Color: </label>
         <input type='text' ng-model='color'>
@@ -49,6 +48,7 @@
     </div>
     <wi-button name='removeCurveButton' label='remove curve' handler='removeCurveButtonClick'></wi-button>
     <wi-button name='removeTrackButton' label='remove track' handler='removeTrackButtonClick'></wi-button>
+    <wi-button name='addShadingkButton' label='add shading' handler='addShadingButtonClick'></wi-button>
     <wi-context-menu name='ContextMenu'></wi-context-menu>
 </div>
 </body>
