--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -151,7 +151,7 @@ input[required] {
 .dialog-error {
 	color: red;
 }
-.sample {
+#sample {
 	width: 100%;
 	height: 200px;
 	border: 1px solid #0C1021;
