Allow dragging on track header

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
 }
-.track-header {
+.track-header-viewport {
+    position: relative;
     width: 100%;
     //height: 100px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     flex: 1;
+
     label {
         //font-size: 6px;
         display: block;
@@ -18,9 +20,17 @@
         }
     }
     label.track-name {
+        position: relative;
         background-color: #88CC88;
+        z-index: 1;
     }
 }
+
+.track-header {
+    position: absolute;
+    width: 100%;
+}
+
 .plot-container {
     position: relative;
     height: 340px;
