--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -5,8 +5,8 @@ wi-treeview {
     font-size: 13px;
     .wi-treeview-container {
         display: block;
-        cursor: pointer;
-        padding: 5px 0 5px 10px;
+        //cursor: pointer;
+        padding-left: 18px;
         wi-treeview{
             border: none;
             //border-left: 1px dotted #cacbd3;
@@ -25,19 +25,24 @@ wi-treeview {
                 //border-left: 1px dotted #ddd;
             }
             .icon-expanded {
-                min-width: 16px;
-                height: 16px;
+                width: 16px;
+                height: 22px;
             }
 
             .wi-parent-content {
                 display: flex;
 
-                &>i {
+                &>div>i {
                     color: #333;
+                    display: block;
+                    margin: auto;
+                    width: 8px;
+                    margin-top: 5px;
                 }
 
-                &>div {
+                &>div:nth-child(2) {
                     flex: 1;
+                    padding: 2px 0;
                 }
             }
         }
@@ -47,4 +52,7 @@ wi-treeview {
         }
     }
 
+    .rootview {
+        padding-left: 0;
+    }
 }
