--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -16,7 +16,7 @@
             </div>
             <div ng-click="wiTreeview.onClick($index)"
                  ng-dblclick="wiTreeview.onDoubleClick($index)">
-                <img class="{{item.data.icon}}" alt="img item treeview">
+                <div class="image-wrapper"><img class="{{item.data.icon}}" alt="img item treeview"></div>
                 <span>{{item.data.label}}</span>
             </div>
         </div>
