--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -46,6 +46,7 @@ wi-treeview {
                         width: 20px;
 
                         img {
+                            display: block;
                             margin: auto;
                         }
                     }
