--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -192,6 +192,14 @@ input[required] {
 	border: none;
 	width: 4.5em;
 }
+.shadingTable tbody tr td input {
+	border: none;
+	width: 5em;
+}
+.shadingTable tbody tr td select {
+	border: none;
+	width: 4.5em;
+}
 .selected {
 	background-color:#cecece;
 }
