scrollable sliding bar

--- a/source/components/wi-slidingbar/wi-slidingbar-test.html
+++ b/source/components/wi-slidingbar/wi-slidingbar-test.html
@@ -13,6 +13,7 @@
     <script src="vendor/js/angular.min.js"></script>
 
     <script src="vendor/js/jquery-ui.js"></script>
+    <script src="vendor/js/jquery.mousewheel.min.js"></script>
 
     <script src='js/main-slidingbar.js.bundle.js'></script>
     
