--- a/source/components/wi-slidingbar/wi-slidingbar.html
+++ b/source/components/wi-slidingbar/wi-slidingbar.html
@@ -1,4 +1,5 @@
-<div id="sliding-bar-content{{wiSlidingbar.name}}" class="sliding-bar-content" ng-transclude wi-element-ready="wiSlidingbar.onReady()"></div>
+<div id="sliding-bar-content{{wiSlidingbar.name}}" class="sliding-bar-content" ng-transclude
+     wi-element-ready="wiSlidingbar.onReady()"></div>
 <div id="sliding-handle{{wiSlidingbar.name}}" class="ui-widget-content sliding-handle">
     <div class="sliding-handle-border"></div>
 </div>
