--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -25,6 +25,7 @@
     <script src="vendor/js/jquery-ui.js"></script>
     <script src="vendor/js/d3.min.js"></script>
     <script src="vendor/js/ResizeSensor.js"></script>
+    <script src="vendor/js/jquery.mousewheel.min.js"></script>
 
     <script src="js/main-logplot.js.bundle.js"></script>
 
