update track properties dialog

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -206,3 +206,7 @@ input[type].display-none {
     -moz-animation-duration:0.2s;
     animation-duration:0.2s;
   }
+
+.display-inline-block {
+    display: inline-block;
+}
