--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -111,6 +111,12 @@ img {
 	padding: 4px 0px;
 
 }
+.padding-left-20-percent {
+	padding-left: 20%;
+}
+.padding-left-5px {
+	padding-left: 5px;
+}
 .small-text {
 	font-size: 11px;
 }
@@ -184,14 +190,14 @@ input[required] {
 	height: 750px;
 	margin: auto;
 }
-.curveTable tbody tr td input {
-	border: none;
-	width: 5em;
+.curveTable tbody tr td {
+	padding: 6px 2px;
 }
-.curveTable tbody tr td select {
-	border: none;
-	width: 4.5em;
-}
+//.curveTable tbody tr td select {
+//	border: none;
+//	//width: 4.5em;
+//}
+
 .shadingTable tbody tr td input {
 	border: none;
 	width: 5em;
@@ -207,3 +213,28 @@ input[required] {
 	font-size: 12px;
 	font-style: bolder;
 }
+form h5 {
+	color: blue;
+}
+form h5:after {
+	background-color: blue;
+}
+.font-size-10px {
+	font-size: 10px;
+	.form-control {
+		font-size: 10px;
+	}
+	.wi-form-control {
+		padding: 2px;
+	}
+}
+.width-95-percent {
+	width: 95%;
+}
+.width-5-percent {
+	width: 5%;
+}
+.float-left {
+	float: left;
+}
+
