zooom button in logplot toolbar

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -15,7 +15,7 @@ body{
     -ms-user-select: none;
     user-select: none;
 }
-span, h4, h5 {
+span, h4, h5, p {
     cursor: default;
 }
 .wi-hidden {
