Implement basic shading functions

--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -49,7 +49,10 @@
     </div>
     <wi-button name='removeCurveButton' label='remove curve' handler='removeCurveButtonClick'></wi-button>
     <wi-button name='removeTrackButton' label='remove track' handler='removeTrackButtonClick'></wi-button>
-    <wi-button name='addShadingkButton' label='add shading' handler='addShadingButtonClick'></wi-button>
+    <wi-button name='addLeftShadingButton' label='add left shading' handler='addLeftShadingButtonClick'></wi-button>
+    <wi-button name='addRightShadingButton' label='add right shading' handler='addRightShadingButtonClick'></wi-button>
+    <wi-button name='addCustomShadingButton' label='add custom shading' handler='addCustomShadingButtonClick'></wi-button>
+    <wi-button name='removeShadingButton' label='remove shading' handler='removeShadingButtonClick'></wi-button>
     <wi-context-menu name='ContextMenu'></wi-context-menu>
 </div>
 </body>
