--- a/source/less/main.less
+++ b/source/less/main.less
@@ -219,3 +219,7 @@ input[type].display-none {
 .display-inline-block {
     display: inline-block;
 }
+
+.margin-right-0_5em {
+    margin-right: 0.5em;
+}
