--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -109,7 +109,9 @@ img {
 }
 .padding-tb-small {
 	padding: 4px 0px;
-
+}
+.padding-0 {
+	padding: 0;
 }
 .padding-left-20-percent {
 	padding-left: 20%;
