update track properties

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -209,7 +209,7 @@ input[required] {
 	width: 4.5em;
 }
 .selected {
-	background-color:#cecece;
+	background-color: #0000ff;
 }
 .table {
 	font-size: 12px;
