--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -40,10 +40,12 @@
     //flex: 1;
 //    border: 1px dashed gray;
 }
-canvas, svg {
-    position:absolute;
-    top:0; left:0; bottom:0; right:0;
-    cursor: crosshair;
+.plot-container {
+    canvas, svg {
+        position:absolute;
+        top:0; left:0; bottom:0; right:0;
+        cursor: crosshair;
+    }
 }
 
 svg {
