--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -26,6 +26,7 @@
     <script src="vendor/js/d3.min.js"></script>
     <script src="vendor/js/ResizeSensor.js"></script>
     <script src="vendor/js/jquery.mousewheel.min.js"></script>
+    <script src="vendor/js/ng-file-upload.min.js"></script>
 
     <script src="js/main-logplot.js.bundle.js"></script>
 
@@ -38,22 +39,21 @@
     <div style="width: 1000px; height: 500px; border: 1px solid green; display: flex">
         <wi-logplot name="myPlot" style="flex: 1"></wi-logplot>
     </div>
-    <wi-button name='depthTrackButton' label='depth track' handler='depthTrackButtonClick'></wi-button>
-    <wi-button name='trackButton' label='track' handler='trackButtonClick'></wi-button>
-    <wi-button name='addData1Button' label='add data 1' handler='addData1ButtonClick'></wi-button>
-    <wi-button name='addData2Button' label='add data 2' handler='addData2ButtonClick'></wi-button>
+    <button ng-click='depthTrackButtonClick()'>depth</button>
+    <button ng-click='trackButtonClick()'>log</button>
+    <button ng-click='addData1ButtonClick()'>data 1</button>
+    <button ng-click='addData2ButtonClick()'>data 2</button>
     <div class='form-group'>
         <label> Color: </label>
         <input type='text' ng-model='color'>
         <button ng-click='changeColor()'>change color</button>
     </div>
-    <wi-button name='removeCurveButton' label='remove curve' handler='removeCurveButtonClick'></wi-button>
-    <wi-button name='removeTrackButton' label='remove track' handler='removeTrackButtonClick'></wi-button>
-    <wi-button name='addLeftShadingButton' label='add left shading' handler='addLeftShadingButtonClick'></wi-button>
-    <wi-button name='addRightShadingButton' label='add right shading' handler='addRightShadingButtonClick'></wi-button>
-    <wi-button name='addCustomShadingButton' label='add custom shading' handler='addCustomShadingButtonClick'></wi-button>
-    <wi-button name='removeShadingButton' label='remove shading' handler='removeShadingButtonClick'></wi-button>
-    <wi-context-menu name='ContextMenu'></wi-context-menu>
+    <button ng-click='removeCurveButtonClick()'>remove curve</button>
+    <button ng-click='removeTrackButtonClick()'>remove track</button>
+    <button ng-click='addLeftShadingButtonClick()'>add left shading</button>
+    <button ng-click='addRightShadingButtonClick()'>add right shading</button>
+    <button ng-click='addCustomShadingButtonClick()'>add custom shading</button>
+    <button ng-click='removeShadingButtonClick()'>remove-shading</button>
 </div>
 </body>
 </html>
