--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -2,10 +2,10 @@
 
 <div class="filter-block">
     <span>Filter: </span>
-    <input type="text" placeholder="well or .../dataset or .../curve or ...">
+    <input type="text" placeholder="Search ...">
 </div>
 
 <div class="label_treeview">
     <span>Name</span><span>Unit</span>
 </div>
-<wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig"></wi-treeview>
+<wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview>
