--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -36,31 +36,32 @@
 -->
 <div class="wi-treeview-container"
      ng-class='{"rootview": wiTreeview.name}'
-     ng-repeat="item in wiTreeview.config track by $index">
+     ng-repeat="item in wiTreeview.config track by $index"
+     ng-if='!item.data.deleted'>
     <div class="wi-parent-node" type="{{wiTreeview.config[$index].type}}"
-         ng-class='{"item-active": item.data.selected}'
-         data="{{wiTreeview.config[$index].id}}"
-         wi-right-click="wiTreeview.onClick($index); wiTreeview.showContextMenu($event, $index)"
-         wi-element-ready="wiTreeview.onReady()">
+        ng-class='{"item-active": item.data.selected}'
+        data="{{wiTreeview.config[$index].id}}"
+        wi-right-click="wiTreeview.onClick($index); wiTreeview.showContextMenu($event, $index)"
+        wi-element-ready="wiTreeview.onReady()">
         <div class="wi-parent-content">
             <div class="icon-expanded"
-                 ng-click="wiTreeview.onCollapse($index)">
+                ng-click="wiTreeview.onCollapse($index)">
                 <i aria-hidden="true" class="fa"
-                   ng-class="
-               {'fa-caret-down': item.data.childExpanded,
-               'fa-caret-right': !item.data.childExpanded,
-               'wi-hidden': item.children == null || item.children.length == 0}"></i>
+                ng-class="
+            {'fa-caret-down': item.data.childExpanded,
+            'fa-caret-right': !item.data.childExpanded,
+            'wi-hidden': item.children == null || item.children.length == 0}"></i>
             </div>
             <div ng-click="wiTreeview.onClick($index)"
-                 ng-dblclick="wiTreeview.onDoubleClick($index)">
+                ng-dblclick="wiTreeview.onDoubleClick($index)">
                 <div class="display-inline-block margin-right-0_5em"><img class="{{item.data.icon}}" alt="img item treeview"></div>
                 <span>{{item.data.label}}</span>
             </div>
         </div>
 
         <div class="wi-parent-unit text-right" ng-show="item.data.unit"
-             ng-click="wiTreeview.onClick($index)"
-             ng-dblclick="wiTreeview.onDoubleClick($index)">
+            ng-click="wiTreeview.onClick($index)"
+            ng-dblclick="wiTreeview.onDoubleClick($index)">
             {{item.data.unit}}
         </div>
     </div>
