fill pattern setting

--- a/source/components/wi-canvas-rect/wi-canvas-rect.html
+++ b/source/components/wi-canvas-rect/wi-canvas-rect.html
@@ -1,1 +1,1 @@
-<canvas id="{{wiCanvasRect.name}}" width="{{wiCanvasRect.width}}" height="{{wiCanvasRect.height}}" wi-element-ready="wiCanvasRect.onReady();"></canvas>
+<canvas id="{{wiCanvasRect.name}}" width="{{wiCanvasRect.width}}" height="{{wiCanvasRect.height}}" wi-element-ready="wiCanvasRect.paint();"></canvas>
