Tung fix before milestone 1

--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -8,4 +8,6 @@
 <div class="label_treeview">
     <span>Name</span><span>Unit</span>
 </div>
-<wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview>
+<div style='padding-left: 10px; background-color:#fff;'>
+    <wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview>
+</div>
