--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -89,39 +89,6 @@ img {
     line-height: 30px;
     border-radius: 5px;
 }
-.padding-top-2em {
-	padding-top: 2em;
-}
-.padding-bottom-2em {
-	padding-bottom: 2em;
-}
-.padding-2em {
-	padding: 2em;
-}
-.padding-50-percent {
-	padding: 50% 0;
-}
-.padding-50px {
-	padding: 50px 0;
-}
-.padding-100px {
-	padding: 100px 0;
-}
-.padding-tb-small {
-	padding: 4px 0px;
-}
-.padding-0 {
-	padding: 0;
-}
-.padding-left-20-percent {
-	padding-left: 20%;
-}
-.padding-left-5px {
-	padding-left: 5px;
-}
-.margin-left-0_5em {
-	margin-left: 0.5em;
-}
 .small-text {
 	font-size: 11px;
 }
@@ -247,4 +214,15 @@ form h5:after {
 }
 .color-error {
 	color: red;
+}
+.form-condensed {
+    .form-group {
+        margin-bottom: 5px;
+    }
+    h1, h2, h3, h4, h5 {
+        margin:0 0 5px 0;
+    }
+}
+.ui-select-bootstrap .ui-select-choices-row>span.ui-select-choices-row-inner {
+    display: inline-block;
 }
