--- a/source/less/main.less
+++ b/source/less/main.less
@@ -234,3 +234,36 @@ input[type].display-none {
 .margin-right-0_5em {
     margin-right: 0.5em;
 }
+.padding-top-2em {
+	padding-top: 2em;
+}
+.padding-bottom-2em {
+	padding-bottom: 2em;
+}
+.padding-2em {
+	padding: 2em;
+}
+.padding-50-percent {
+	padding: 50% 0;
+}
+.padding-50px {
+	padding: 50px 0;
+}
+.padding-100px {
+	padding: 100px 0;
+}
+.padding-tb-small {
+	padding: 4px 0px;
+}
+.padding-0 {
+	padding: 0;
+}
+.padding-left-20-percent {
+	padding-left: 20%;
+}
+.padding-left-5px {
+	padding-left: 5px;
+}
+.margin-left-0_5em {
+	margin-left: 0.5em;
+}
