--- a/source/less/main.less
+++ b/source/less/main.less
@@ -225,7 +225,25 @@ input[type].display-none {
     -webkit-animation-duration:0.2s;
     -moz-animation-duration:0.2s;
     animation-duration:0.2s;
-  }
+}
+
+.has-more {
+    & > div {
+        position: relative;
+    }
+    button::after {
+        content:'';
+        width:0;
+        height:0;
+        position: absolute;
+        right: 0.5em;
+        top:0.5em;
+        border-left: 5px solid black;
+        border-right: 5px solid transparent;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+    }
+}
 
 .display-inline-block {
     display: inline-block;
