update tab curve - logTrackProperties

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -165,19 +165,22 @@ input[required] {
 .curveTable tbody tr td {
 	padding: 6px 2px;
 }
+.shadingTable tbody tr td {
+	padding: 6px 2px;
+}
 //.curveTable tbody tr td select {
 //	border: none;
 //	//width: 4.5em;
 //}
 
-.shadingTable tbody tr td input {
-	border: none;
-	width: 5em;
-}
-.shadingTable tbody tr td select {
-	border: none;
-	width: 4.5em;
-}
+// .shadingTable tbody tr td input {
+// 	border: none;
+// 	width: 5em;
+// }
+// .shadingTable tbody tr td select {
+// 	border: none;
+// 	width: 4.5em;
+// }
 .selected {
 	background-color: #0000ff;
 }
