--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -57,7 +57,20 @@ img {
 	padding: 15px 20px 15px;
 	margin-top:0; 
 } 
-
+.footer-left {
+	float: left;
+	text-align: left;
+	p {
+		color: blue;
+	}
+}
+.footer-right {
+	float: right;
+	text-align: right;
+	p {
+		color: blue;
+	}
+}
 .modal-footer button {
 	padding: 4px 10px 4px 8px;
 	background: rgba(255,255,255,1);
