--- a/source/app/components/wi-properties/wi-properties.html
+++ b/source/app/components/wi-properties/wi-properties.html
@@ -1,3 +1,3 @@
-<wi-list name="{{item.name}}" heading="{{item.heading}}" items="item.data"
-         ng-repeat="item in wiProperties.listConfig">
+<wi-list name="{{config.name}}" heading="{{config.heading}}" items="config.data""
+         ng-repeat="config in wiProperties.listConfig">
 </wi-list>
