--- a/source/components/wi-list/wi-list.html
+++ b/source/components/wi-list/wi-list.html
@@ -5,7 +5,13 @@
 </p>
 <table ng-show='wiList.shown'>
     <tr ng-repeat="item in wiList.items">
-        <td>{{item.key}}</td>
-        <td>{{item.value}}</td>
+        <td style="width: 40%">
+            {{item.label}}
+        </td>
+        <td>
+            <input ng-if="!item.type" type="text" ng-model="item.value" ng-disabled="!item.editable"
+            wi-enter="wiList.onChange(item); $event.currentTarget.blur();" ng-blur="wiList.onChange(item)">
+            <input ng-if="item.type == 'checkbox'" type="checkbox" ng-model="item.value" ng-change="wiList.onChange(item)">
+        </td>
     </tr>
 </table>
