Allow null value when plotting

--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -36,6 +36,8 @@
 <body ng-app='helloapp'>
 
 <div ng-controller="WiDummy">
+    <wi-explorer name="WiExplorer" tree-config="myTreeviewConfig" style="display: none"></wi-explorer>
+    <wi-properties name="WiProperties" list-config="myPropertiesConfig" style="display: none"></wi-properties>
     <div style="width: 1000px; height: 500px; border: 1px solid green; display: flex">
         <wi-logplot name="myPlot" style="flex: 1"></wi-logplot>
     </div>
