change in orderNum to allow add track to arbitrary positions. Suggested to change orderNum to orderKey

--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -1,9 +1,16 @@
 wi-d3 {
-    width: 100%; 
+    //border: 1px solid black;
+    //padding: 2px;
+    //width: 100%; 
     display:flex;
     .d3-region {
+        //border: 1px solid blue;
         display: flex;
-        width: 100%;
+        //width: 100%;
         flex: 1;
     }
+    .moving * {
+        cursor: move !important;
+    }
+    overflow: hidden;
 }
