--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -18,7 +18,8 @@ wi-logplot {
         flex-direction: row;
 
         .slidingbar {
-            width: 100px;
+            width: 80px;
+            min-width:80px;
             display: flex;
         }
 
