--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -195,7 +195,7 @@ input[required] {
 // 	width: 4.5em;
 // }
 .selected {
-	background-color: #0000ff;
+	background-color: #C8C9D0;
 }
 .table {
 	font-size: 12px;
