--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -27,6 +27,7 @@
     <script src="vendor/js/ResizeSensor.js"></script>
     <script src="vendor/js/jquery.mousewheel.min.js"></script>
     <script src="vendor/js/ng-file-upload.min.js"></script>
+    <script src="vendor/js/kendo.all.min.js"></script>
 
     <script src="js/main-logplot.js.bundle.js"></script>
 
@@ -55,6 +56,7 @@
     <button ng-click='addLeftShadingButtonClick()'>add left shading</button>
     <button ng-click='addRightShadingButtonClick()'>add right shading</button>
     <button ng-click='addCustomShadingButtonClick()'>add custom shading</button>
+    <button ng-click='addPairShadingButtonClick()'>add pair shading</button>
     <button ng-click='removeShadingButtonClick()'>remove-shading</button>
 </div>
 </body>
