--- a/source/components/wi-list/wi-list.less
+++ b/source/components/wi-list/wi-list.less
@@ -28,17 +28,28 @@ wi-list {
 
 		tr{
 			td{
-		 		border-right:1px solid #cacbd3; 
-		 		text-indent: 8px;
-		 	}
-		 	td:last-child{
-		 		border: none;
-		 	}
+				border-bottom: 1px solid #cacbd3; 
+		 		border-right: 1px solid #cacbd3; 
+				text-indent: 8px;
+				input{
+					background: transparent;
+					border-width: 0;
+					font-weight: bold;
+				  &[disabled="disabled"]{
+						color: #aaaaaa;
+					}
+				}
+			}
+			td:first-child {
+				width: 40%;
+			}	
+			td:last-child{
+				border-right: none;
+			}
 		}
-
-		tr:nth-child(even) {
-		 	background-color: #f9f9fc;		 	
-		}	
+		// tr:nth-child(even) {
+		//  	background-color: #f9f9fc;		 	
+		// }	
 	}
 }
 /*
