--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -11,6 +11,7 @@ wi-slidingbar {
   .ui-widget-content {
     width: 100%;
     background-color: transparent;
+    z-index: 2;
   }
 
   .sliding-bar-content {
@@ -19,6 +20,7 @@ wi-slidingbar {
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 1;
     overflow: hidden;
   }
 
