--- a/source/less/main.less
+++ b/source/less/main.less
@@ -4,6 +4,17 @@ input, button, textarea, select{
 		outline: none;
 	}
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
 body{
     background: url(../img/bg_index.png) repeat;
 
