--- a/source/less/main.less
+++ b/source/less/main.less
@@ -17,7 +17,7 @@ input, button, textarea, select{
 
 body{
     background: url(../img/bg_index.png) repeat;
-
+    overflow: hidden;
     // disable text selection
     -webkit-touch-callout: none;
     -webkit-user-select: none;
