add well name to logplot

--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -12,6 +12,15 @@ wi-logplot {
         }
     }
 
+    .logplot-well-name {
+        margin: 0px 4px;
+        padding: 2px;
+        background-color: rgb(136, 204, 136);
+        text-align: center;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
     .logplot-main-content {
         flex: 1;
         display: flex;
