--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -1,6 +1,7 @@
 <div class="logplot-toolbar-wrapper">
     @@include('./toolbar/index.html')
 </div>
+<div class="logplot-well-name" ng-bind="wiLogplot.wellName"></div>
 <div class="logplot-main-content">
     <div class='slidingbar'>
         <wi-slidingbar
