fix button icon

--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -4,7 +4,7 @@
             data-toggle="tooltip" data-placement="bottom" title="{{wiButton.tooltip || wiButton.config.tooltip || wiButton.default.tooltip}}"
             ng-disabled='wiButton.isDisabled()'
             wi-element-ready="wiButton.initTooltip() ">
-        <img ng-if="wiButton.icon" class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}" alt="icon wi-button">
+        <span ng-if="wiButton.icon" class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}"></span>
         <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}"
         ng-show="wiButton.label != null || wiButton.config.label != null">
             {{wiButton.label || wiButton.config.label || wiButton.default.label}}</p>
