--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -18,7 +18,7 @@
             </div>
             <div ng-click="wiTreeview.onClick($index)"
                 ng-dblclick="wiTreeview.onDoubleClick($index)">
-                <div class="display-inline-block margin-right-0_5em"><img class="{{item.data.icon}}" alt="img item treeview"></div>
+                <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
                 <span>{{item.data.label}}</span>
             </div>
         </div>
