drag and drop wi-d3

--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -4,6 +4,7 @@ wi-d3 {
     //width: 100%; 
     display:flex;
     .d3-region {
+        position: relative;
         //border: 1px solid blue;
         display: flex;
         //width: 100%;
