--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -242,3 +242,30 @@ form h5:after {
 .ui-select-bootstrap .ui-select-choices-row>span.ui-select-choices-row-inner {
     display: inline-block;
 }
+input.color-comp::-webkit-inner-spin-button,
+input.color-comp::-webkit-outer-spin-button{
+	-webkit-appearance: none; 
+  	margin: 0;
+}
+input.color-comp {
+	border: 1px solid lightblue;
+	margin: 2px 4px;
+	width: 95%;
+	display: inline-block;
+	color: blue;
+}
+.wiColorpicker {
+
+	width: 100%;
+	.colorpicker-saturation {
+		width: 170px;
+		height: 170px;
+	}
+	.colorpicker-hue, .colorpicker-alpha {
+		width: 20px;
+		height: 170px;
+	}
+	.colorpicker-color, .colorpicker-color div {
+		height: 20px;
+	}
+}
