working on crossplot & histogram

--- a/source/app/components/wi-crossplot/template/toolbar/index.html
+++ b/source/app/components/wi-crossplot/template/toolbar/index.html
@@ -28,34 +28,34 @@
 
 		</wi-button>
 		<wi-dropdown name="FunctionsDropdown" label="Functions" type="small">
-				<wi-button name="CreatePolygonButton" label="Create Polygon" type="small" handler="handlers.CreatePolygonButtonClicked">
+				<wi-button name="CreatePolygonButton" label="Create Polygon" type="small" class="height-auto" handler="handlers.CreatePolygonButtonClicked">
 
 				</wi-button>
-				<wi-button name="CreateRectangleButton" label="Create Rectangle" type="small" handler="handlers.CreateRectangleButtonClicked">
+				<wi-button name="CreateRectangleButton" label="Create Rectangle" type="small" class="height-auto" handler="handlers.CreateRectangleButtonClicked">
 
 				</wi-button>
-				<wi-button name="DeleteAreaButton" label="Delete Area" type="small" handler="handlers.DeleteAreaButtonClicked">
+				<wi-button name="DeleteAreaButton" label="Delete Area" type="small" class="height-auto" handler="handlers.DeleteAreaButtonClicked">
 
 				</wi-button>
-				<wi-button name="CreateUserLineButton" label="Create User Line" type="small" handler="handlers.CreateUserLineButtonClicked">
+				<wi-button name="CreateUserLineButton" label="Create User Line" type="small" class="height-auto" handler="handlers.CreateUserLineButtonClicked">
 
 				</wi-button>
-				<wi-button name="DeleteUserLineButton" label="Delete User Line" type="small" handler="handlers.DeleteUserLineButtonClicked">
+				<wi-button name="DeleteUserLineButton" label="Delete User Line" type="small" class="height-auto" handler="handlers.DeleteUserLineButtonClicked">
 
 				</wi-button>
-				<wi-button name="UserDefineLineButton" label="User Define Line" type="small" handler="handlers.UserDefineLineButtonClicked">
+				<wi-button name="UserDefineLineButton" label="User Define Line" type="small" class="height-auto" handler="handlers.UserDefineLineButtonClicked">
 
 				</wi-button>
-				<wi-button name="PolygonManagerButton" label="Polygon Manager" type="small" handler="handlers.PolygonManagerButtonClicked">
+				<wi-button name="PolygonManagerButton" label="Polygon Manager" type="small" class="height-auto" handler="handlers.PolygonManagerButtonClicked">
 
 				</wi-button>
-				<wi-button name="RegressionLineButton" label="Regession Line" type="small" handler="handlers.RegressionLineButtonClicked">
+				<wi-button name="RegressionLineButton" label="Regession Line" type="small" class="height-auto" handler="handlers.RegressionLineButtonClicked">
 
 				</wi-button>
 
 		</wi-dropdown>
 		<wi-dropdown name="TernaryDropdown" label="Ternary" type="small">
-				<wi-button name="ConfigTernaryDiagramButton" label="Config Ternary Diagram" type="small" handler="handlers.ConfigTernaryDiagramButtonClicked">
+				<wi-button name="ConfigTernaryDiagramButton" label="Config Ternary Diagram" type="small" class="height-auto" handler="handlers.ConfigTernaryDiagramButtonClicked">
 
 				</wi-button>
 
