--- a/source/app/components/wi-crossplot/template/wi-crossplot.html
+++ b/source/app/components/wi-crossplot/template/wi-crossplot.html
@@ -1,6 +1,11 @@
 <div class="crossplot-toolbar-wrapper">
     @@include('./toolbar/index.html')
 </div>
-<div class="crossplot-main-content">
-    
+<div class="crossplot-main-content" style="flex: 1; display: flex; flex-direction: row;">
+    <div class="zone">
+        
+    </div>
+    <wi-d3-crossplot style="width: 100%; flex: 1; display: flex;"
+    name='{{wiCrossplot.wiD3AreaName}}'
+    wi-logplot-ctrl='wiCrossplot'></wi-d3-crossplot>
 </div>
