--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -269,3 +269,14 @@ input.color-comp {
 		height: 20px;
 	}
 }
+div.addon {
+	border: 1px solid #ccc;
+	height: 26px;
+	width: 50px;
+	display: inline-block;
+	margin-right: 5px;
+}
+.width-80px {
+	width: 80px;
+	display: inline-block;
+}
