--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -1,13 +1,21 @@
 wi-d3 {
     //border: 1px solid black;
     //padding: 2px;
-    //width: 100%; 
+    //width: 100%;
     display:flex;
     .d3-region {
         //border: 1px solid blue;
         display: flex;
+        position: relative;
         //width: 100%;
         flex: 1;
+        .d3-region-svg {
+            position: absolute;
+            z-index: 10;
+            top: 0;
+            left: 0;
+            pointer-events: none;
+        }
     }
     .moving * {
         cursor: move !important;
