working on crossplot & histogram

--- a/source/app/components/wi-crossplot/template/wi-crossplot.html
+++ b/source/app/components/wi-crossplot/template/wi-crossplot.html
@@ -7,5 +7,5 @@
     </div>
     <wi-d3-crossplot style="width: 100%; flex: 1; display: flex;"
     name='{{wiCrossplot.wiD3AreaName}}'
-    wi-logplot-ctrl='wiCrossplot'></wi-d3-crossplot>
+    wi-crossplot-ctrl='wiCrossplot'></wi-d3-crossplot>
 </div>
