--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
@@ -1,2 +1,2 @@
-<div wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.plotAreaId}}' class='d3-region'>
+<div wi-right-click='wiD3Crossplot.showContextMenu($event)' id='{{wiD3Crossplot.plotAreaId}}' class='d3-crossplot-region'>
 </div>
