--- a/source/app/components/wi-histogram/template/wi-histogram.html
+++ b/source/app/components/wi-histogram/template/wi-histogram.html
@@ -3,8 +3,6 @@
 </div>
 <div class="histogram-main-content" style="flex: 1; display: flex; flex-direction: row;">
     <wi-d3-histogram style="width: 100%; flex: 1; display: flex;"
-    name='{{wiCrossplot.wiD3AreaName}}'
-    wi-logplot-ctrl='wiCrossplot'></wi-d3-histogram>
-    <div class="reference-curve">
-    </div>
+    name='{{wiHistogram.wiD3AreaName}}'
+    wi-histogram-ctrl='wiHistogram'></wi-d3-histogram>
 </div>
