--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -272,11 +272,13 @@ input.color-comp {
 div.addon {
 	border: 1px solid #ccc;
 	height: 26px;
-	width: 50px;
+	width: 45px;
 	display: inline-block;
-	margin-right: 5px;
+	margin-right: 3px;
 }
 .width-80px {
-	width: 80px;
+	width: 53px;
+	height: 26px;
 	display: inline-block;
+	font-size: 11px;
 }
