working on curve properties, fix track width

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -57,8 +57,8 @@ span, h4, h5, p {
     z-index: 100;
 }
 
-.lm_goldenlayout{
-    padding: 5px 0px;
+#myLayout{
+    padding-top: 3px;
     background: none;
 }
 
