working on shading tab

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -267,6 +267,9 @@ input[type].display-none {
 .margin-right-0_5em {
     margin-right: 0.5em;
 }
+.margin-top-0_5em {
+    margin-top: 0.5em;
+}
 .padding-top-2em {
 	padding-top: 2em;
 }
