Add simple zone track

--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -44,6 +44,7 @@
     </div>
     <button ng-click='depthTrackButtonClick()'>depth</button>
     <button ng-click='trackButtonClick()'>log</button>
+    <button ng-click='zoneTrackButtonClick()'>zone</button>
     <button ng-click='addData1ButtonClick()'>data 1</button>
     <button ng-click='addData2ButtonClick()'>data 2</button>
     <div class='form-group'>
@@ -58,10 +59,6 @@
     <button ng-click='addCustomShadingButtonClick()'>add custom shading</button>
     <button ng-click='addPairShadingButtonClick()'>add pair shading</button>
     <button ng-click='removeShadingButtonClick()'>remove-shading</button>
-
-    <div style="width: 1000px; height: 500px; border: 1px solid green; display: flex">
-        <wi-crossplot name="myCrossPlot" style="flex: 1"></wi-crossplot>
-    </div>
 </div>
 </body>
 </html>
