--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -3,8 +3,13 @@
 }
 
 .vi-zone-track-container {
+
     .vi-track-plot-container {
         border: 1px solid black;
+
+        .vi-zone-line {
+            cursor: row-resize;
+        }
     }
 }
 
