Allow zone to have pattern filling

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -28,4 +28,10 @@
         z-index: 1;
         cursor: default;
     }
+
+    .vi-zone-header-fill {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 }
