--- a/source/components/wi-tabs/wi-tabset.html
+++ b/source/components/wi-tabs/wi-tabset.html
@@ -2,7 +2,8 @@
     <ul class="nav nav-tabs">
         <li class="wi-tab" ng-repeat="tab in wiTabset.tabs track by $index"
             ng-class="{'active': tab.active}"
-            ng-click="wiTabset.selectTab($index)">
+            ng-click="wiTabset.selectTab($index)"
+            ng-show="tab.enabled == 'true'">
             <a>{{tab.heading}}</a>
             <i class="ti-close"
                ng-show="tab.closable == 'true'"
