--- a/source/components/wi-context-menu/wi-context-menu.less
+++ b/source/components/wi-context-menu/wi-context-menu.less
@@ -28,6 +28,9 @@ wi-context-menu {
                         vertical-align: -webkit-baseline-middle;
                         margin-left: 5px;
                     }
+                    span {
+                        vertical-align: middle;
+                    }
                 }
             }
         }
