--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -313,3 +313,18 @@ table.shadingTable td {
 .thick-border {
 	border-color:black;
 }
+.text-11px {
+	font-size: 11px;
+}
+.text-bold {
+	font-style: bolder;
+}
+.empty {
+	width: 100%;
+	height: 300px;
+	border: 2px dashed #ccc;
+}
+.border-right { 
+    border-right: 2px solid #eee; 
+
+}
