--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -145,11 +145,12 @@ input[required] {
 .dialog-error {
 	color: red;
 }
-//#sample {
-//	width: 100%;
-//	height: 200px;
-//	border: 1px solid #0C1021;
-//}
+#sample {
+	/* width: 100%;
+	height: 200px;
+	border: 1px solid #0C1021; */
+	margin-left: 20px;
+}
 .trackTab {
 	margin-top: 10px;
 	border-bottom: 1px solid #cecece;
