--- a/source/less/main.less
+++ b/source/less/main.less
@@ -312,6 +312,15 @@ input[type].display-none {
 .padding-0 {
 	padding: 0;
 }
+.padding-left-0 {
+    padding-left: 0px;
+}
+.padding-right-0 {
+    padding-right: 0px;
+}
+.padding-top-0 {
+    padding-top: 0px !important;
+}
 .padding-left-20-percent {
 	padding-left: 20%;
 }
