working on crossplot

--- a/source/app/components/wi-crossplot/template/wi-crossplot.html
+++ b/source/app/components/wi-crossplot/template/wi-crossplot.html
@@ -6,6 +6,6 @@
         
     </div>
     <wi-d3-crossplot style="width: 100%; flex: 1; display: flex;"
-    name='{{wiCrossplot.wiD3AreaName}}'
+    name='{{wiCrossplot.wiD3CrossplotAreaName}}'
     wi-crossplot-ctrl='wiCrossplot'></wi-d3-crossplot>
 </div>
