--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -320,12 +320,17 @@ table.shadingTable td {
 .text-bold {
 	font-style: bolder;
 }
+.border-right { 
+    border-right: 2px solid #eee; 
+
+}
 .empty {
 	width: 100%;
 	height: 300px;
 	border: 2px dashed #ccc;
 }
-.border-right { 
-    border-right: 2px solid #eee; 
-
+.empty-table-values {
+	width: 100%;
+	height: 100px;
+	border: 2px dashed #ccc;
 }
