--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -1,2 +1,2 @@
-<div wi-right-click='wiD3Histogram.showContextMenu($event)' id='{{wiD3Histogram.plotAreaId}}' class='d3-histogram-region'>
+<div wi-right-click='wiD3Histogram.showContextMenu($event)' id='{{wiD3Histogram.histogramAreaId}}' class='d3-histogram-region'>
 </div>
